--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -12,11 +12,11 @@ body {
 }
 .display-1 {
   font-family: 'Rubik', sans-serif;
-  font-size: 4rem;
+  font-size: 3.4rem;
   line-height: 1.1;
 }
 .display-1 > .mbr-iconfont {
-  font-size: 5rem;
+  font-size: 4.25rem;
 }
 .display-2 {
   font-family: 'Rubik', sans-serif;
@@ -57,14 +57,14 @@ body {
 /* 0.65 - min scale variable, may vary */
 @media (max-width: 992px) {
   .display-1 {
-    font-size: 3.2rem;
+    font-size: 2.72rem;
   }
 }
 @media (max-width: 768px) {
   .display-1 {
-    font-size: 2.8rem;
-    font-size: calc( 2.05rem + (4 - 2.05) * ((100vw - 20rem) / (48 - 20)));
-    line-height: calc( 1.1 * (2.05rem + (4 - 2.05) * ((100vw - 20rem) / (48 - 20))));
+    font-size: 2.38rem;
+    font-size: calc( 1.8399999999999999rem + (3.4 - 1.8399999999999999) * ((100vw - 20rem) / (48 - 20)));
+    line-height: calc( 1.1 * (1.8399999999999999rem + (3.4 - 1.8399999999999999) * ((100vw - 20rem) / (48 - 20))));
   }
   .display-2 {
     font-size: 2.4rem;
@@ -1096,6 +1096,138 @@ a {
 }
 .cid-sYywSmFnch .mbr-description {
   color: #ffffff;
+}
+.cid-sYAwce2CnV {
+  padding-top: 5rem;
+  padding-bottom: 5rem;
+  background-color: #000000;
+}
+.cid-sYAwce2CnV .mbr-overlay {
+  z-index: 1;
+}
+.cid-sYAwce2CnV .main-container-text {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  padding: 0 1rem;
+  margin: 0 auto 65px;
+  flex-shrink: 1;
+  position: relative;
+  z-index: 2;
+}
+@media (max-width: 767px) {
+  .cid-sYAwce2CnV .main-container-text {
+    margin-bottom: 30px;
+  }
+}
+@media (max-width: 991px) {
+  .cid-sYAwce2CnV .main-container-text {
+    padding: 0 0.75rem;
+  }
+}
+.cid-sYAwce2CnV .item-title {
+  width: 100%;
+  color: #e6c63b;
+}
+.cid-sYAwce2CnV .mbr-text {
+  color: #ffffff;
+}
+.cid-sYAwce2CnV .main-container {
+  display: flex;
+  flex-wrap: wrap;
+  position: relative;
+  z-index: 2;
+}
+.cid-sYAwce2CnV .card-container {
+  display: flex;
+}
+.cid-sYAwce2CnV .card-container .card {
+  border-radius: 0;
+}
+.cid-sYAwce2CnV .card-container .card .item-img {
+  height: 450px;
+  display: flex;
+}
+@media (max-width: 767px) {
+  .cid-sYAwce2CnV .card-container .card .item-img {
+    height: 400px;
+  }
+}
+.cid-sYAwce2CnV .card-container .card .item-img img {
+  width: 100%;
+  object-fit: cover;
+  height: 450px;
+}
+@media (max-width: 767px) {
+  .cid-sYAwce2CnV .card-container .card .item-img img {
+    height: 400px;
+  }
+}
+.cid-sYABpvCnF6 {
+  padding-top: 3rem;
+  padding-bottom: 2rem;
+  background-color: #000000;
+}
+.cid-sYABpvCnF6 .mbr-overlay {
+  z-index: 1;
+}
+.cid-sYABpvCnF6 .main-container-text {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  padding: 0 1rem;
+  margin: 0 auto 65px;
+  flex-shrink: 1;
+  position: relative;
+  z-index: 2;
+}
+@media (max-width: 767px) {
+  .cid-sYABpvCnF6 .main-container-text {
+    margin-bottom: 30px;
+  }
+}
+@media (max-width: 991px) {
+  .cid-sYABpvCnF6 .main-container-text {
+    padding: 0 0.75rem;
+  }
+}
+.cid-sYABpvCnF6 .item-title {
+  width: 100%;
+  color: #e6c63b;
+}
+.cid-sYABpvCnF6 .mbr-text {
+  color: #ffffff;
+}
+.cid-sYABpvCnF6 .main-container {
+  display: flex;
+  flex-wrap: wrap;
+  position: relative;
+  z-index: 2;
+}
+.cid-sYABpvCnF6 .card-container {
+  display: flex;
+}
+.cid-sYABpvCnF6 .card-container .card {
+  border-radius: 0;
+}
+.cid-sYABpvCnF6 .card-container .card .item-img {
+  height: 450px;
+  display: flex;
+}
+@media (max-width: 767px) {
+  .cid-sYABpvCnF6 .card-container .card .item-img {
+    height: 400px;
+  }
+}
+.cid-sYABpvCnF6 .card-container .card .item-img img {
+  width: 100%;
+  object-fit: cover;
+  height: 450px;
+}
+@media (max-width: 767px) {
+  .cid-sYABpvCnF6 .card-container .card .item-img img {
+    height: 400px;
+  }
 }
 .cid-sWSbPQRYM6 {
   padding-top: 3rem;
